allow embedded [] in entry names. This fixes the parser, instead of KConfigBase.

BUG: 112379

svn path=/branches/KDE/3.5/kdelibs/; revision=556653